add body style and start navigation styling

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
   <head>
     <title>Tea Cosy</title>
+    <link rel="stylesheet" href="./resources/style.css">
   </head>
   <body>
 
 <!--Navigation Section -->
     <div class="navigation">
         <div class="navigation__logo">
-          <img>
+          <img src="./resources/image-logo.png" alt="logo">
         </div>
         <div class="navigation__buttons">
-          <a href="#"> <span></span> </a>
-          <a href="#"> <span></span> </a>
-          <a href="#"> <span></span> </a>
-          <a href="#"> <span></span> </a>
+          <a href="#"> <span>Mission</span> </a>
+          <a href="#"> <span>Featured Tea</span> </a>
+          <a href="#"> <span>Locations</span> </a>
     </div>
 
 <!--Header Section -->
