add color and spacing to navigation buttons

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <!--Navigation Section -->
     <div class="navigation">
         <div class="navigation__logo">
-          <img src="./resources/image-logo.png" alt="logo">
+          <img id="logo" src="./resources/image-logo.png" alt="logo">
         </div>
         <div class="navigation__buttons">
-          <a href="#"> <span>Mission</span> </a>
-          <a href="#"> <span>Featured Tea</span> </a>
-          <a href="#"> <span>Locations</span> </a>
+          <a href="#"><span class="navigation__button">Mission</span></a>
+          <a href="#"><span class="navigation__button">Featured Tea</span></a>
+          <a href="#"><span class="navigation__button">Locations</span></a>
     </div>
 
 <!--Header Section -->
 
-    <div>
+    <div class="header">
       <div class="header__title">
         <h1></h1>
         <h2></h2>
@@ -42,7 +42,7 @@
 
 <!--Locations Section -->
 
-    <div>
+    <div class="location">
       <h1></h1>
       <div></div>
       <div></div>
@@ -51,7 +51,7 @@
 
 <!--Footer Section -->
 
-    <div>
+    <div class="footer">
       <h1></h1>
       <span></span>
       <span></span>
