add backround image, text, and styling for the header

--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
 
     <div class="header">
       <div class="header__title">
-        <h1></h1>
-        <h2></h2>
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch,
+        Fair Trade, Organic Tea</h4>
       </div>
     </div>
 
 <!--Tea of the month Section -->
 
     <div class="tea-month">
-      <h1></h1>
-      <h2></h2>
+      <div>
+        <h2></h2>
+        <h4></h4>
+      </div>
       <div class="tea-month__teas">
         <div></div>
         <div></div>
