--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
   <body>
 
 <!--Navigation Section -->
-    <div class="navigation">
+    <header class="navigation">
         <div class="navigation__logo">
           <img id="logo" src="./resources/image-logo.png" alt="logo">
         </div>
-        <div class="navigation__buttons">
+        <nav class="navigation__buttons">
           <a href="#"><span class="navigation__button">Mission</span></a>
           <a href="#"><span class="navigation__button">Featured Tea</span></a>
           <a href="#"><span class="navigation__button">Locations</span></a>
-    </div>
+        </nav>
+    </header>
+
+<!--Main container -->
+
+  <div class="main">
 
 <!--Header Section -->
 
@@ -51,6 +56,7 @@
       <div></div>
       <div></div>
     </div>
+  </div>
 
 <!--Footer Section -->
 
