add text, images, and styling

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   </head>
   <body>
 
-<!--Navigation Section -->
-    <header class="navigation">
-        <div class="navigation__logo">
+<!--Menu Section -->
+    <header class="menu">
+        <div class="menu__logo">
           <img id="logo" src="./resources/image-logo.png" alt="logo">
         </div>
-        <nav class="navigation__buttons">
-          <a href="#"><span class="navigation__button">Mission</span></a>
-          <a href="#"><span class="navigation__button">Featured Tea</span></a>
-          <a href="#"><span class="navigation__button">Locations</span></a>
+        <nav class="menu__buttons">
+          <a href="#"><span class="menu__button">Mission</span></a>
+          <a href="#"><span class="menu__button">Featured Tea</span></a>
+          <a href="#"><span class="menu__button">Locations</span></a>
         </nav>
     </header>
 
@@ -36,25 +36,58 @@
 
     <div class="tea-month">
       <div>
-        <h2></h2>
-        <h4></h4>
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
       </div>
       <div class="tea-month__teas">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="tea-month__image-headings">
+          <img class="tea-month__images" src="./resources/image-berryblitz.jpg" alt="">
+          <h4>Fall Berry Blitz</h4>
+        </div>
+        <div class="tea-month__image-headings">
+          <img class="tea-month__images" src="./resources/image-rum.jpg" alt="">
+          <h4>Spiced Rum Tea</h4>
+        </div>
+        <div class="tea-month__image-headings">
+          <img class="tea-month__images" src="./resources/image-donut.jpg" alt="">
+          <h4>Seasonal Donuts</h4>
+        </div>
+        <div class="tea-month__image-headings">
+          <img class="tea-month__images" src="./resources/image-donut.jpg" alt="">
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+        <div class="tea-month__image-headings">
+          <img class="tea-month__images" src="./resources/image-bedford.jpg" alt="">
+          <h4>Bedford Bizarre Tea</h4>
+        </div>
       </div>
     </div>
 
 <!--Locations Section -->
 
     <div class="location">
-      <h1></h1>
-      <div></div>
-      <div></div>
-      <div></div>
+      <h2>Locations</h2>
+      <div class="location__boxes">
+        <div class="location__box">
+          <h3>Downtown</h3>
+          <span class="location__address">384 West 4th St</span><br>
+          <span class="location__address">Suite 108</span><br>
+          <span class="location__address">Portland, Maine</span>
+        </div>
+        <div class="location__box">
+          <h3>East Bayside</h3>
+          <span class="location__address">3433 Phisherman's Avenue</span><br>
+          <span class="location__address">(Northwest Corner)</span><br>
+          <span class="location__address">Portland, Maine</span>
+        </div>
+        <div class="location__box">
+          <h3>Oakdale</h3>
+          <span class="location__address">515 Crescent Avenue</span><br>
+          <span class="location__address">Second Floor</span><br>
+          <span class="location__address">Portland, Maine</span>
+        </div>
+
+      </div>
     </div>
   </div>
 
