add footer text and style. add interal links to sections on the page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
           <img id="logo" src="./resources/image-logo.png" alt="logo">
         </div>
         <nav class="menu__buttons">
-          <a href="#"><span class="menu__button">Mission</span></a>
-          <a href="#"><span class="menu__button">Featured Tea</span></a>
-          <a href="#"><span class="menu__button">Locations</span></a>
+          <a href="#mission"><span class="menu__button">Mission</span></a>
+          <a href="#featured"><span class="menu__button">Featured Tea</span></a>
+          <a href="#locations"><span class="menu__button">Locations</span></a>
         </nav>
     </header>
 
@@ -24,7 +24,7 @@
 
 <!--Header Section -->
 
-    <div class="header">
+    <div id="mission" class="header">
       <div class="header__title">
         <h2>Our Mission</h2>
         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch,
@@ -34,7 +34,7 @@
 
 <!--Tea of the month Section -->
 
-    <div class="tea-month">
+    <div id="featured" class="tea-month">
       <div>
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
@@ -65,26 +65,26 @@
 
 <!--Locations Section -->
 
-    <div class="location">
+    <div id="locations" class="location">
       <h2>Locations</h2>
       <div class="location__boxes">
         <div class="location__box">
           <h3>Downtown</h3>
-          <span class="location__address">384 West 4th St</span><br>
-          <span class="location__address">Suite 108</span><br>
-          <span class="location__address">Portland, Maine</span>
+          <p class="location__address">384 West 4th St</p>
+          <p class="location__address">Suite 108</p>
+          <p class="location__address">Portland, Maine</p>
         </div>
         <div class="location__box">
           <h3>East Bayside</h3>
-          <span class="location__address">3433 Phisherman's Avenue</span><br>
-          <span class="location__address">(Northwest Corner)</span><br>
-          <span class="location__address">Portland, Maine</span>
+          <p class="location__address">3433 Phisherman's Avenue</p>
+          <p class="location__address">(Northwest Corner)</p>
+          <p class="location__address">Portland, Maine</p>
         </div>
         <div class="location__box">
           <h3>Oakdale</h3>
-          <span class="location__address">515 Crescent Avenue</span><br>
-          <span class="location__address">Second Floor</span><br>
-          <span class="location__address">Portland, Maine</span>
+          <p class="location__address">515 Crescent Avenue</p>
+          <p class="location__address">Second Floor</p>
+          <p class="location__address">Portland, Maine</p>
         </div>
 
       </div>
@@ -94,11 +94,12 @@
 <!--Footer Section -->
 
     <div class="footer">
-      <h1></h1>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
+      <div class="footer__main">
+        <h2>The Tea Cozy</h2>
+        <h5 class="footer__address">contact@theteacosy.com</h5>
+        <h5 class="footer__address">917-555-8904</h5>
+      </div>
+      <p class="footer__copywrite">copywrite The Tea Cozy 2017</p>
     </div>
   </body>
 </html>
